Boss Level Challenge- Simon Game & JQuery Practice

--- a/JQuery/index.html
+++ b/JQuery/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Web Page</title>
+    <title>jQuery</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My Web Page</h1>
-    <p>This is a paragraph of text on my web page.</p>
-    <script src="index.js"></script>
+    <h1>JQuery</h1>
+    <button>Practiceeeee</button>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="index.js"><fd/script>
 </body>
 </html>
